Added fullcalendar and moment as static assets

--- a/force-app/main/default/pages/SummitEvents.page
+++ b/force-app/main/default/pages/SummitEvents.page
@@ -11,6 +11,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="pageTitle"><a href="/SummitEvents">Events</a></apex:define>
         <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
+            <link href="{!URLFOR($Resource.SummitEventsAssets, '/fullcalendar/lib/main.css')}" rel="stylesheet" type="text/css"/>
 
             <!--
                 The event calendar can be applied to any Web site. Just copy the highlighted code to any html file on the web.
@@ -21,9 +22,8 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     ** Custom Javascript to embed Salesforce feed and format it (highlighted below)
             -->
             <!-- Copy this for Summit Events Fullcalendar display on any page. Insert anywhere before code below -->
-            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.css"/>
-            <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.6.0/main.min.js"></script>
-            <script src="https://cdn.jsdelivr.net/npm/moment@2.29.1/moment.min.js"></script>
+            <apex:includeScript value="{!URLFOR($Resource.SummitEventsAssets, '/fullcalendar/lib/main.js')}"/>
+            <apex:includeScript value="{!URLFOR($Resource.SummitEventsAssets, '/moment.min.js')}"/>
             <script src="https://unpkg.com/@popperjs/core@2"></script>
             <script src="https://unpkg.com/tippy.js@6"></script>
             <!-- end copy -->
