--- a/force-app/main/default/pages/SummitEventsConfirmation.page
+++ b/force-app/main/default/pages/SummitEventsConfirmation.page
@@ -23,8 +23,21 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     <apex:messages />
                 </div>
                 <apex:form id="SummitEventsConfirmationForm" styleClass="slds-grid slds-wrap">
-                    <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                        <apex:outputText escape="false" value="{!navBreadCrumb}"/>
+                    <!-- EVENT BREADCRUMB -->
+                    <div class="slds-col slds-p-vertical-small slds-size_1-of-1">
+                        <nav role="navigation" aria-label="Breadcrumbs">
+                            <ol class="slds-breadcrumb slds-list_horizontal">
+                                <apex:outputPanel rendered="{!!ISBLANK(eventPage.Event_Name__c)}" layout="none">
+                                    <li class="slds-breadcrumb__item slds-text-title_caps slds-p-right_x-small">{!eventPage.Event_Name__c}</li>
+                                </apex:outputPanel>
+                                <apex:outputPanel rendered="{!!ISBLANK(eventInstance.Instance_Title__c)}" layout="none">
+                                    <li class="slds-breadcrumb__item slds-text-title_caps slds-p-horizontal_x-small">{!eventInstance.Instance_Title__c}</li>
+                                </apex:outputPanel>
+                                <apex:outputPanel rendered="{!!ISBLANK(formattedNavDate)}" layout="none">
+                                    <li class="slds-breadcrumb__item slds-text-title_caps slds-p-horizontal_x-small">{!formattedNavDate}</li>
+                                </apex:outputPanel>
+                            </ol>
+                        </nav>
                     </div>
                     <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
                         <h2 class="slds-text-heading_large slds-p-vertical_xx-small">
