--- a/force-app/main/default/pages/SummitEventsCancelReview.page
+++ b/force-app/main/default/pages/SummitEventsCancelReview.page
@@ -19,7 +19,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="sectionNav"/>
         <apex:define name="body">
             <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
-                <apex:messages />
+                <apex:messages/>
             </div>
             <apex:form id="SummitEventsRegistrationCancelReview" rendered="{!!eventOver && !eventNotFound && eventRegistration.Status__c != 'Cancelled'}" styleClass="slds-grid slds-wrap">
                 <div class="slds-col slds-size_1-of-1 slds-p-vertical_x-small slds-p-vertical_xx-small">
@@ -73,7 +73,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                     </apex:outputPanel>
                     <apex:outputPanel layout="block" rendered="{!IF (evt.Status__c = 'Cancelled', true, false)}">
                         <p class="slds-text-body slds-p-vertical_xx-small warning">
-                            <apex:outputText escape="false" value="{!evt.Event__r.Event_Cancelled_Notification_Text__c}"/>
+                            <apex:outputText value="{!evt.Event__r.Event_Cancelled_Notification_Text__c}"/>
                         </p>
                     </apex:outputPanel>
 
