--- a/force-app/main/default/pages/SummitEventsSubmit.page
+++ b/force-app/main/default/pages/SummitEventsSubmit.page
@@ -15,6 +15,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
         <apex:define name="pageTitle"><a href="{!eventPage.Event_Home_Link_URL__c}">{!eventPage.Event_Home_Link_Title__c}</a></apex:define>
         <apex:define name="scriptsHead">
             <link href="{!URLFOR($Resource.SummitEventsAssets, '/css/main.css')}" rel="stylesheet" type="text/css"/>
+            <script src="{!URLFOR($Resource.SummitEventsAssets, '/js/submit.js')}" type="text/javascript"/>
         </apex:define>
         <apex:define name="sectionNav"/>
         <apex:define name="body">
@@ -93,7 +94,7 @@ Created by Thaddaeus Dahlberg on 5/1/2018.
                                 <apex:repeat value="{!eventFees}" var="fee">
                                     <apex:outputPanel rendered="{!fee.Event_Fee_Type__c != 'Event'}">
                                         <tr>
-                                            <td>
+                                            <td class="feeAllocation">
                                                 <apex:outputPanel rendered="{!fee.Event_Fee_Type__c == 'Appointment'}" layout="none">
                                                     {!fee.Event_Appointment_Type__r.Title__c}
                                                 </apex:outputPanel>
